--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
         <p> documentation built for both humans and AI</p>
 
         <div class="searchbar">
-          <input type="text" name="" id="search">
-
+          <input type="text" placeholder="Email address" id="search">
+          <button>Start now</button>
         </div>
       </div>
 
+      <div class="hero">
+        <img src="/assets/image.png" alt="">
+      </div>
     </div>
 
     </div>
