--- a/index.html
+++ b/index.html
@@ -67,7 +67,50 @@
         <img src="/assets/image.png" alt="">
       </div>
     </div>
+    <main>
+      <section class="Knowledge">
+        <div class="explore">
+          <div>
+            <P>Enterprise-reinvention</P>
+            <h1>Bring intelligence to<br> enterprise knowledge</h1>
+            <p>Modernize without the rebuild with enterprise-grade professional service & security.
 
+            </p>
+          </div>
+          <div>
+            <button>
+              Explore for enterprise
+            </button>
+          </div>
+        </div>
+
+        <div class="explore-2">
+
+          <div>
+
+            <h1>Build with partnership</h1>
+            <p>Direct, white-glove access to our documentation experts. Dedicated migration support and guidance
+              tailored to your setup, and elevated support SLAs.</p>
+          </diV>
+
+          <div>
+            <h1>Compliance and access control</h1>
+            <p>Compliant with SOC 2, and in the process for ISO/27001 and GDPR compliance to meet your internal and
+              external data requirements. Secure access and provisioning with SAML-based SSO.</p>
+          </div>
+
+
+
+        </div>
+        <div class="explore-3"><img src="/assets/anthropic.svg" /></div>
+
+
+
+
+
+      </section>
+
+    </main>
     </div>
   </header>
 
