--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
 
         <div class="nav-links">
-          <p class="links ">Resources</p>
-          <p class="links ">Documentation</p>
-          <p class="links ">Customers</p>
-          <p class="links ">Blog</p>
-          <p class="links ">Pricing</p>
+          <p class="links">Resources</p>
+          <p class="links">Documentation</p>
+          <p class="links">Customers</p>
+          <p class="links">Blog</p>
+          <p class="links">Pricing</p>
 
         </div>
 
@@ -66,53 +66,162 @@
       <div class="hero">
         <img src="/assets/image.png" alt="">
       </div>
-    </div>
-    <main>
-      <section class="Knowledge">
-        <div class="explore">
-          <div>
-            <P>Enterprise-reinvention</P>
-            <h1>Bring intelligence to<br> enterprise knowledge</h1>
-            <p>Modernize without the rebuild with enterprise-grade professional service & security.
 
-            </p>
-          </div>
-          <div>
-            <button>
-              Explore for enterprise
-            </button>
-          </div>
-        </div>
-
-        <div class="explore-2">
-
-          <div>
-
-            <h1>Build with partnership</h1>
-            <p>Direct, white-glove access to our documentation experts. Dedicated migration support and guidance
-              tailored to your setup, and elevated support SLAs.</p>
-          </diV>
-
-          <div>
-            <h1>Compliance and access control</h1>
-            <p>Compliant with SOC 2, and in the process for ISO/27001 and GDPR compliance to meet your internal and
-              external data requirements. Secure access and provisioning with SAML-based SSO.</p>
-          </div>
-
-
-
-        </div>
-        <div class="explore-3"><img src="/assets/anthropic.svg" /></div>
-
-
-
-
-
-      </section>
-
-    </main>
     </div>
   </header>
+
+
+  <main>
+    <section class="compName">
+      <img src="/assets/Screenshot 2026-02-06 193048.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 193032.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 193026.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 193020.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 193012.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 192959.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 192951.png" alt="">
+      <img src="/assets/Screenshot 2026-02-06 192932.png" alt="">
+
+    </section>
+
+
+    <section>
+
+      <div class="animations-heading">
+        <h1>Built for the intelligence age</h1>
+        <p>Integrate AI into every part of your docs lifecycle. Woven into how your </p>
+        <p>knowledge is written, maintained, and understood by both users and LLMs.</p>
+      </div>
+      <div class="animation">
+
+        <div>
+
+          <img src="/assets/Screenshot 2026-02-06 195631.png" alt="">
+        </div>
+        <div><img src="/assets/Screenshot 2026-02-06 195650.png" alt=""></div>
+
+      </div>
+
+      <div class="animation-2">
+        <img src="/assets/Screenshot 2026-02-06 195728.png" alt="">
+      </div>
+
+
+
+    </section>
+
+    <section class="Knowledge">
+      <div class="explore">
+        <div>
+          <h4>Enterprise-reinvention</h4>
+          <h1>Bring intelligence to<br> enterprise knowledge</h1>
+          <p>Modernize without the rebuild with enterprise-grade professional service & security.
+
+          </p>
+        </div>
+        <div>
+          <button>
+            Explore for enterprise
+          </button>
+        </div>
+      </div>
+
+      <div class="explore-2">
+
+        <div>
+          <img src="/assets/Screenshot 2026-02-06 154944.png">
+
+          <h1>Build with partnership</h1>
+          <p>Direct, white-glove access to our documentation experts. Dedicated migration support and guidance
+            tailored to your setup, and elevated support SLAs.</p>
+        </diV>
+
+        <div>
+
+          <img src="/assets/Screenshot 2026-02-06 155016.png">
+          <h1>Compliance and access control</h1>
+          <p>Compliant with SOC 2, and in the process for ISO/27001 and GDPR compliance to meet your internal and
+            external data requirements. Secure access and provisioning with SAML-based SSO.</p>
+        </div>
+      </div>
+
+      <div class="explore-3">
+
+        <img id="anthropic" src="/assets/anthropic.svg" />
+
+        <div id="uppertext">
+          <p>Customer story</p>
+          <h3>See how Anthropic accelerates <br> development with Mintlify</h3>
+          <span>Read story ></span>
+
+        </div>
+
+        <div class="texts">
+          <div>
+            <p id="number">2M+</p>
+            <p>Monthly active developers</p>
+          </div>
+
+          <div>
+            <p id="number">3M+</p>
+            <p>
+              Products serviced: Claude <br>API, MCP, and Claude Code</p>
+          </div>
+        </div>
+        <div id="logs"><img src="/assets/logs.png" alt=""></div>
+      </div>
+    </section>
+
+    <section class="unlock-knowledge">
+
+      <div class="knowledge-heading">
+        <p id="customer">customers</p>
+        <h1>Unlock knowledge for any industry</h1>
+        <p>From frontier AI companies to consumer brands, leaders across industries scale </p>
+        <P>with Mintlify.</P>
+      </div>
+
+
+      <div class="slidwindo">
+        <div> <img src="/assets/perplexity.webp" />
+          <p>
+            How Perplexity transformed its documentation into an AI-native developer experience ...
+
+          </p>
+          <p> Read story ></p>
+        </div>
+        <div> <img src="/assets/x.png" />
+          <P>
+            How X is using Mintlify to power the developer experience for the global town square</p>
+
+          <p> Read story ></P>
+        </div>
+        <div><img src="/assets/kalshi.webp" />
+          <P>
+            How X is using Mintlify to power the developer experience for the global town square</p>
+
+          <p> Read story ></P>
+        </div>
+        <div> <img src="/assets/cognition.webp" />
+          <P>
+            How X is using Mintlify to power the developer experience for the global town square</p>
+
+          <p> Read story ></P>
+        </div>
+        <div> <img src="/assets/vercel.png" />
+          <P>
+            How X is using Mintlify to power the developer experience for the global town square</p>
+
+          <p> Read story ></P>
+        </div>
+
+
+      </div>
+
+    </section>
+
+  </main>
+  </div>
 
 
 
