--- a/index.html
+++ b/index.html
@@ -220,13 +220,114 @@
 
     </section>
 
+    <section class="documation">
+      <div class="docs-headings">
+        <h3>Make documentation </h3>
+        <h3>your winning advantage</h3>
+        <p>Join the leaders of tomorrow to future proof your documentation today.</p>
+        <button id="right-btn">Get started for free
+
+
+        </button>
+        <button id="left-btn"> Get a demo</button>
+      </div>
+
+      <img src="/assets/xys.png" alt="">
+    </section>
   </main>
+
+  <footer>
+    <Div class="footerNav">
+      <img src="/assets/idjQU-FEBd_1770279509826.svg" alt="">
+      <div><i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+
+    </Div>
+
+    <div class="footerLinks">
+      <div>
+        <ul>
+          <li>EXPLORE</li>
+          <li>Startups</li>
+          <li>Enterprise</li>
+          <li>Switch</li>
+          <li>OSS Program</li>
+        </ul>
+      </div>
+      <div>
+        <UL>
+
+          <Li>RESOURCES</Li>
+          <Li>Customers</Li>
+          <Li>Blog</Li>
+          <Li>Pricing</Li>
+          <Li>Guides</Li>
+          <Li>Feature Requests</Li>
+        </UL>
+
+      </div>
+      <div>
+        <ul>
+          <li>
+            DOCUMENTATION
+          </li>
+          <li>Getting Started
+          </li>
+          <li>API Reference
+          </li>
+          <li>Components
+          </li>
+          <li>Changelog</li>
+        </ul>
+
+      </div>
+      <div>
+        <ul>
+          <li>COMPONY</li>
+          <li>Careers
+          </li>
+          <li>Wall of Love</li>
+        </ul>
+
+      </div>
+      <div>
+        <ul>
+          <li>LEGAL</li>
+          <li>Privacy Policy
+          </li>
+
+          <li>Responsible Disclosure</li>
+          <li>Terms Of Service</li>
+          <li>Security
+          </li>
+          <li>DSR/DSAR</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="soc">
+      <p>Backed by enterprise-grade security</p>
+      <img src="/assets//aicp.png" alt="">
+    </div>
+
+    <div class="lastrow">
+      <div> <button>All systems normal</button></div>
+      <div>
+        <p>© 2026 Mintlify, Inc.</p>
+      </div>
+      <div>
+        <div id="toggler">
+          <i class="fa-solid fa-sun"></i>
+          <i class="fa-solid fa-moon"></i>
+          <i class="fa-solid fa-desktop"></i>
+        </div>
+      </div>
+
+  </footer>
+
   </div>
-
-
-
-
-
 </body>
 
 </html>
